--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color:#F2F6F9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.price-dist-parent{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  height: 733px;
+
+  margin-top: 100px;
+}
+
+.graph-parent{
+  flex-grow: 2;
+  border-radius: 12px;
+  max-width: 1060px;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.exp-parent{
+  flex-grow: 1;
+  border-radius: 12px;
+  max-width: 391px;
+  display: flex;
+  background-color: white;
+  padding-top: 60px;
 }
