--- a/src/Components/graph.css
+++ b/src/Components/graph.css
@@ -1,40 +1,72 @@
-.graph-parent{
-    position: relative;
+.graph-parent {
+  position: relative;
 }
 
-.graph-title{
-    padding-left: 60px;
-    position: absolute;
-    top: 10px;
-    padding-block: 30px;
+.graph-parent {
+  flex-grow: 2;
+  border-radius: 12px;
+  max-width: 1060px;
+  background-color: white;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.pie-cont{
-    position: relative;
+.price-dist-parent{
     display: flex;
-}
-
-.centerCircle{
-    width: 200px;
-    height:200px;
-    background-color: white;
-    position: absolute;
-    border-radius: 50%;
-    top: 32%;
-    right: 44%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
     justify-content: center;
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    height: 733px;
+  
+    margin-top: 100px;
+  }
+
+.exp-parent {
+  flex-grow: 1;
+  border-radius: 12px;
+  max-width: 391px;
+  display: flex;
+  background-color: white;
+  padding-top: 60px;
 }
 
-.centerCircle > p, h1{
-    margin: 5px;
+.graph-title {
+  padding-left: 60px;
+  position: absolute;
+  top: 10px;
+  padding-block: 30px;
+}
+
+.pie-cont {
+  position: relative;
+  display: flex;
+}
+
+.centerCircle {
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  position: absolute;
+  border-radius: 50%;
+  top: 32%;
+  right: 44%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
+
+.centerCircle > p,
+h1 {
+  margin: 5px;
 }
 
 .centerCircle > h1 {
-    color: #3153CD;
+  color: #3153cd;
 }
 
 /* .MuiPieArcLabel-root{
